MDEV-6702: analyze_stmt test fails in --embedded 10.1

Provide Protocol_discard::storeXXX functions for all kinds
of objects that could be stored. Failure to so would caused
crashes in embedded server which attempted to collect the
stored info.

This also reduces the amount of copy operations for non-embedded
case.